# DevPilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/agents/: ai-integration.md  code-analysis.md  documentation.md  performance.md  planner.md  react-ui.md  reviewer.md  rust-backend.md  tech-lead.md  testing.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  di.rs  main.rs  state.rs
apps/desktop/src/features/ai-chat/: AiChatView.tsx  store.ts
apps/desktop/src/features/ai-chat/components/: ChatInput.tsx  Markdown.tsx  MessageList.tsx
apps/desktop/src/features/analysis/: AnalysisView.tsx  store.ts
apps/desktop/src/features/analysis/components/: LanguageBars.tsx  ScanReportView.tsx
apps/desktop/src/features/architecture/: ArchitectureView.tsx  layout.ts  store.ts
apps/desktop/src/features/architecture/components/: GraphCanvas.tsx
apps/desktop/src/features/insights/: InsightsView.tsx  store.ts
apps/desktop/src/features/repository/: RepositoryView.tsx  store.ts
apps/desktop/src/features/repository/components/: OpenActions.tsx  ProjectMetadataPanel.tsx  RecentProjectsList.tsx
apps/desktop/src/features/settings/: SettingsView.tsx  store.ts
apps/desktop/src/lib/: updater.ts  version.ts
apps/desktop/src/lib/i18n/: dictionaries.test.ts  en.ts  interpolate.ts  plurals.ts  ru.ts
apps/desktop/src/lib/ipc/: architecture.ts  ast.ts  chat.ts  dialog.ts  env.ts  intel.ts  repository.ts  scan.ts  settings.ts
apps/desktop/src/lib/store/: i18n.ts  navigation.ts  theme.ts
apps/desktop/src/shared/: format.ts  navigation.tsx
apps/desktop/src/shared/hooks/: useMediaQuery.ts  useResizablePanel.ts
apps/desktop/src/shared/ui/: Button.tsx  ContentArea.tsx  EmptyState.tsx  IconButton.tsx  ResizeHandle.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
apps/desktop/src/styles/: globals.css
crates/devpilot-ai/: Cargo.toml
crates/devpilot-ai/src/: claude.rs  common.rs  gemini.rs  lib.rs  ollama.rs  openai.rs
crates/devpilot-ai/tests/: providers.rs
crates/devpilot-analysis/: Cargo.toml
crates/devpilot-analysis/src/: extract.rs  lib.rs
crates/devpilot-analysis/tests/: parse.rs
crates/devpilot-core/: Cargo.toml
crates/devpilot-core/src/: architecture.rs  chat.rs  intel.rs  lib.rs
crates/devpilot-core/src/entities/: analysis.rs  ast.rs  graph.rs  history.rs  intel.rs  language.rs  llm.rs  metadata.rs  metrics.rs  mod.rs  project.rs  repository.rs  scan.rs  settings.rs  tree.rs
crates/devpilot-core/src/errors/: mod.rs
crates/devpilot-core/src/ports/: analyzer.rs  cache.rs  git.rs  llm.rs  mod.rs  progress.rs  recent.rs  scanner.rs  settings.rs
crates/devpilot-core/src/usecases/: analyze_architecture.rs  chat_with_repository.rs  code_intelligence.rs  mod.rs  open_project.rs  recent_projects.rs  scan_repository.rs
crates/devpilot-git/: Cargo.toml  build.rs
crates/devpilot-git/src/: convert.rs  lib.rs
crates/devpilot-git/tests/: integration.rs
crates/devpilot-scan/: Cargo.toml
crates/devpilot-scan/src/: detectors.rs  lib.rs
crates/devpilot-scan/tests/: integration.rs
crates/devpilot-storage/: Cargo.toml
crates/devpilot-storage/src/: lib.rs  recent_projects.rs  settings.rs
crates/devpilot-storage/tests/: recent_projects.rs  settings.rs
crates/devpilot-testing/: Cargo.toml
crates/devpilot-testing/src/: fixtures.rs  lib.rs
crates/devpilot-testing/src/mocks/: analyzer.rs  cache.rs  git.rs  llm.rs  mod.rs  progress.rs  recent.rs  scanner.rs  settings.rs
crates/devpilot-testing/tests/: mocks.rs  usecases.rs
docs/: architecture.md
docs/adr/: 0001-clean-architecture-workspace.md  0002-core-conventions.md
