[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/*"]

[workspace.package]
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/s1rry/devpilot"
authors = ["DevPilot contributors"]

[workspace.dependencies]
async-trait = "0.1"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
