[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/*"]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/s1rry/devpilot"
authors = ["DevPilot contributors"]

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
git2 = "0.19"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
wiremock = "0.6"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

[profile.release]
codegen-units = 1
lto = true
strip = true
