[package]
name = "devpilot-analysis"
description = "Code analysis adapter: tree-sitter parsing, AST metrics, language detection."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devpilot-core = { path = "../devpilot-core" }
