[package]
name = "devpilot-scan"
description = "Project scanner: detects frameworks and dependencies from manifests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devpilot-core = { path = "../devpilot-core" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
