[package]
name = "devpilot-storage"
description = "Local persistence adapter: SQLite cache for analysis results and app settings."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devpilot-core = { path = "../devpilot-core" }
