[package]
name = "devpilot-storage"
description = "Local persistence adapters: JSON recent-projects store (SQLite cache to follow)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devpilot-core = { path = "../devpilot-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
