[package]
name = "devpilot-testing"
description = "Shared test doubles for DevPilot: mocks for core ports and repository fixtures."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devpilot-core = { path = "../devpilot-core" }
async-trait = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
