[package]
name = "devpilot-desktop"
description = "DevPilot desktop shell: Tauri composition root. No business logic lives here."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
futures-util = { workspace = true }
devpilot-core = { path = "../../../crates/devpilot-core" }
devpilot-analysis = { path = "../../../crates/devpilot-analysis" }
devpilot-ai = { path = "../../../crates/devpilot-ai" }
devpilot-git = { path = "../../../crates/devpilot-git" }
devpilot-scan = { path = "../../../crates/devpilot-scan" }
devpilot-storage = { path = "../../../crates/devpilot-storage" }
